# playground

.github/workflows/: go-junit-report.yaml  gotestsum.yaml  junit-report-action.yaml
denops-issue268/: pyproject.toml
denops-issue268/rplugin/python3/: denops-issue268.py
gotestsum/: .gitignore  go.mod
gotestsum/a/b/c/: c_test.go
junit-report-action/: unit-test.xml
os-user-current/: Dockerfile  go.mod  main.go
